1999-03-12  Michael Natterer  <mitschel@cs.tu-berlin.de>

        This is mostly unit stuff and code cleanup
	
	* libgimp/gimpi.def: add some functions

	* libgimp/gimpsizeentry.[ch]: new function
	gimp_size_entry_set_refval_digits() which allows for float pixel
	input. SIGFPE bugfix from Yasuhiro Shirasaki
	<yasuhiro@awa.tohoku.ac.jp>, minor bugfixes.

	* libgimp/gimpunitmenu.[ch]: add a separator after "pixels",
	bugfixes.

	* app/interface.[ch]: split up the old query_string_box() into
	query_[string|int|float|size]_box(). All functions take an
	optional GtkObject* parameter and connect to that object's
	"destroy" signal, this fixes some segfaults. And a global
	s/container_border_width/container_set_border_width/

	* app/commands.s: grow, shrink, border, feather now use the
	query_size_box. Used MIN(xres,yres) for now for the pixel<->unit
	calculations. Fixed some memory leaks.

	* app/global_edit.c
	* app/gradient.c
	* app/palette.c
	* app/paths_dialog.c: changed the query_string_box() calls

Thu Mar 11 19:42:12 CET 1999 Marc Lehmann <pcg@goof.com>

        * configure.in, config.h.in: added test for _exit (mirrors the
        change in plug-ins/perl/etc/configure.frag)

1999-03-10  Jay Cox  <jaycox@earthlink.net>

	* plug-ins/wind/wind.c, plug-ins/bumpmap/bumpmap.c: Set
 	appropriate values for the tile cache.  This makes a large speed
 	difference.

1999-03-10  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/devices.c: don't let session management set the size of the
	"Device Status" dialog, as the number of devices may change
	between sessions

Mon Mar  8 16:45:06 PST 1999 Manish Singh <yosh@gimp.org>

	* Made 1.1.3 release

	* gimprc.5.in: use @GIMP_VERSION@

Mon Mar  8 16:27:25 PST 1999 Manish Singh <yosh@gimp.org>

	* app/hue_saturation.c: comment out Raph's saturation changes,
	didn't work in all cases

1999-03-08  Tor Lillqvist  <tml@iki.fi>

	* app/devices.c (devices_write_rc): A line had been deleted by
 	mistake.
